--- a/CompanyEFDataManager/Views/Customer/Index.cshtml
+++ b/CompanyEFDataManager/Views/Customer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CompanyDataManager.Models.Customer>
+﻿@model IEnumerable<CompanyEFDataManager.Models.Customer>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -57,7 +57,7 @@
                     @Html.DisplayFor(model => item.Email)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id }) |
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
