--- a/CompanyEFDataManager/Views/Shared/_Layout.cshtml
+++ b/CompanyEFDataManager/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/angular-route")
-    @Scripts.Render("~/bundles/CustomerClient")
+    <script src="~/app/CustomerClient.js"></script>
+    <script src="~/app/Services/CustomerService.js"></script>
+    <script src="~/app/Controllers/CustomerController.js"></script>
     @RenderSection("scripts", required: false)
 </head>
 <body ng-controller="CustomerController">
@@ -38,9 +40,5 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
